tests/neg/i11072.scala
trait Sealed[A]

enum Foo derives Sealed { // error
  case A, B, C
}